[package]
name = "proxy_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.23", features = ["json"] }
base64 = "0.21.7"
tokio-rustls = "0.25.0"
argh = "0.1.12"
rustls-pemfile = "2.0.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }